--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,142 @@
 :root {
   /* Fonts */
-  --primary-fonts: ;
-  --secondary-fonts: ;
+  --primary-fonts: "Open Sans", sans-serif;
+  --secondary-fonts: "Raleway", sans-serif;
+
   /* Text color */
   --primary-txt-cl: #303030;
   --secondary-txt-cl: #555555;
   --accent-tx-cl: #ff6c00;
+  --light-tx-cl: #fff;
+
   /* BG color */
   --primary-bg-cl: #191c26;
   --accent-bg-cl: #ff6c00;
+
   /* Others */
+}
+.link {
+  text-decoration: none;
+  color: currentColor;
+}
+.btn {
+  font-family: inherit;
+  color: var(--primary-txt-cl);
+  font-size: 12px;
+  font-weight: 600;
+  line-height: calc(16 / 12);
+  letter-spacing: 0.09px;
+  text-transform: uppercase;
+  background-color: transparent;
+  cursor: pointer;
+}
+.btn:hover,
+.btn:focus {
+  background-color: var(--accent-bg-cl);
+}
+.btn-theme-dark {
+  color: var(--light-tx-cl);
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 18px;
+  line-height: calc(30 / 18);
+  letter-spacing: 0.02em;
+  color: var(--primary-fonts);
+}
+.header {
+  background-color: var(--primary-bg-cl);
+}
+.header-logo {
+}
+.header-logo-img {
+}
+.header-list {
+}
+.header-item {
+}
+.header-link,
+.header-contact {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: calc(16 / 12);
+  letter-spacing: 0.1em;
+  color: var(--light-tx-cl);
+}
+.header-link:hover,
+.header-link:focus,
+.header-contact:hover,
+.header-contact:focus {
+  color: var(--accent-bg-cl);
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: calc(16 / 12);
+  letter-spacing: 0.1em;
+}
+.header-button {
+  font-family: inherit;
+  color: var(--light-tx-cl);
+  font-size: 12px;
+  font-weight: 600;
+  line-height: calc(16 / 12);
+  letter-spacing: 0.09px;
+  text-transform: uppercase;
+  background-color: transparent;
+  cursor: pointer;
+}
+.header-button:hover,
+.header-button:focus {
+  background-color: var(--accent-bg-cl);
+}
+
+/* Hero section */
+.hero {
+}
+.hero-list {
+}
+.hero-item {
+}
+.hero-link {
+  color: var(--primary-txt-cl);
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 2.2px;
+}
+.hero-link:hover,
+.hero-link:focus {
+  color: var(--accent-tx-cl);
+}
+.uppertitle {
+  color: rgba(157, 164, 189, 0.6);
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-transform: uppercase;
+}
+.hero-title {
+  color: #fff;
+  font-family: Raleway;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 3.6px;
+}
+.hero-descr {
+}
+.slider-pagination {
+}
+.slider-pagination-item {
+}
+.slider-controls {
+}
+.slider-controls-item {
+}
+.slider-controls-btn {
 }
